--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>study-diary</title>
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
   </head>
   <body>
     <div id="root"></div>
