--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!doctype html><html><head><meta charset="UTF-8"><title>study-diary</title><meta name="viewport" content="initial-scale=1,width=device-width"/><script defer="defer" src="/main.js"></script><link href="/main.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>study-diary</title>
+  <meta name="viewport" content="initial-scale=1,width=device-width" />
+  <script defer="defer" src="./main.js"></script>
+  <link href="./main.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
+</html>
